[tool.poetry]
name = "chat-broomva-tech"
version = "0.1.0"
description = ""
authors = ["Carlos D. Escobar-Valbuena <carlosdavidescobar@gmail.com>"]
readme = "README.md"
packages = [{include = "chat"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
langchain = "^0.1.17"
openai = "^1.25.1"
faiss-cpu = "^1.8.0"
chromadb = "^0.5.0"
tiktoken = "^0.6.0"
pymupdf = "^1.24.2"
duckduckgo-search = "^5.3.0"
wikipedia = "^1.4.0"
langchain-openai = "^0.1.5"
langchain-community = "^0.0.36"
chainlit = "^1.0.506"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
